--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=robin-kim_LgVideoChatDemo
-sonar.organization=robin-kim
+sonar.projectKey=sekipark2_lgvideochatdemo
+sonar.organization=sekipark2
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=LgVideoChatDemo
